metrique/tests/ui/fail/tag.stderr
error: `tag` attribute is only supported on entry enums
 --> tests/ui/fail/tag.rs:5:1
  |
5 | / struct Operation {
6 | |     bytes: usize,
7 | | }
  | |_^

error: `tag` attribute is only supported on entry enums, not value enums
  --> tests/ui/fail/tag.rs:11:1
   |
11 | / enum Status {
12 | |     Active,
13 | |     Inactive,
14 | | }
   | |_^

error: tag requires either name or name_exact parameter: #[metrics(tag(name = "..."))] or #[metrics(tag(name_exact = "..."))]
  --> tests/ui/fail/tag.rs:17:11
   |
17 | #[metrics(tag)]
   |           ^^^

error: tag cannot have both name and name_exact parameters
  --> tests/ui/fail/tag.rs:23:11
   |
23 | #[metrics(tag(name = "op", name_exact = "op"))]
   |           ^^^

error: invalid name: name field must not be empty
  --> tests/ui/fail/tag.rs:29:22
   |
29 | #[metrics(tag(name = ""))]
   |                      ^^

error: invalid name: name must not contain spaces
  --> tests/ui/fail/tag.rs:35:22
   |
35 | #[metrics(tag(name = "my operation"))]
   |                      ^^^^^^^^^^^^^^
